# KiwoomData

./: .env.example  .gitignore  README.md  TODO.idr  main.py  pyproject.toml
.claude/skills/: formal-spec-guide.md
CodeReview/: CodeReview.md
Specs/: Main.idr
Specs/Backtesting/: Core.idr  Strategy.idr
Specs/Backtesting/Performance/: BasicMetrics.idr  RiskMetrics.idr
Specs/Collector/: API.idr  HistoricalDownload.idr  RateLimit.idr
Specs/Core/: ErrorTypes.idr  TimeTypes.idr  Types.idr
Specs/Database/: Hypertable.idr  Indexing.idr  Schema.idr
Specs/Resilience/: NetworkFailure.idr
Specs/Sync/: FileExport.idr  NetworkTransfer.idr  Strategy.idr
Specs/Validation/: Continuity.idr  Deduplication.idr  Invariants.idr
Specs/Vector/: Embedding.idr  FeatureEngineering.idr  OptimalTransport.idr  SlidingWindow.idr
examples/: demo_pipeline.py  demo_vector_pipeline.py
models/: pca_600_to_64.pkl
src/kiwoomdata/collector/: __init__.py  rate_limiter.py
src/kiwoomdata/core/: __init__.py  error_types.py  time_types.py  types.py
src/kiwoomdata/database/: __init__.py  buffer.py  exporter.py
src/kiwoomdata/utils/: __init__.py  sample_data.py
src/kiwoomdata/validation/: __init__.py  deduplication.py  invariants.py
src/kiwoomdata/vector/: __init__.py  embedding.py  features.py  sliding_window.py
tests/: test_core_types.py  test_embedding.py  test_features.py  test_pipeline.py  test_rate_limiter.py  test_sliding_window.py  test_validation.py
